--- a/ignore/style.css
+++ b/ignore/style.css
@@ -1,17 +1,30 @@
 body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
+  
 }
 
 html{
     height: 100%;
     width: 100%; 
+    display: grid;
 }
 
-.top-main-menu{
-  height: 10%;
+.container{
+display: grid;
+grid-template-areas: 
+"header header"
+"sidebar content"
+"footer footer";
+}
+
+.header{
+  /* height: 10%; */
   width: 100%;
   background-color: black;
+  grid-area: header;
 }
 .nav-bar {
     float: right;
@@ -35,25 +48,26 @@ a{
 
 
 
-.side-left{
+.sidebar{
     background-color: brown;
     width: 60%;
     height: 70%;
-    float: left;
+    grid-area: sidebar;
 }
 
-.side-right{
+.content{
     background-color:  #99ff99;
     width: 40%;
     height: 70%;
-    float:right;
+    grid-area: content;
 }
 
 .footer{
-    clear: both;
+    
     background-color: grey;
     height: 20%;
     width: 100%;
+    grid-area: footer;
 }
 
 table ,td, th{
