--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 html{
@@ -9,9 +11,11 @@ html{
 }
 
 .top-main-menu{
-  height: 10%;
-  width: 100%;
-  background-color: black;
+      /* height: 10%; */
+      width: 100%;
+      background-color: black;
+      display: flex;
+      justify-content: space-between;
 }
 .nav-bar {
     float: right;
